--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # User config
-author: "Pineapple"
-tagline: "Pineapple Certfied Jekyll Theme"
-description: "In 1493, explorer Christopher Columbus found pineapples on Guadeloupe Island in the Caribbean. Pineapple on pizza soon followed..."
-keywords: "Pineapple, Pineapple Pizza, Pineapple House"
-email: "pineapple@example.com"
-linkedin: "https://www.linkedin.com/"
-twitter: "https://twitter.com/"
-github: "https://github.com/"
+author: "Conor"
+tagline: "You want stories, you got stories"
+description: "Lots of example Stories"
+keywords: "Stories"
+email: "conor@conoroneill.com"
+linkedin: "https://www.linkedin.com/in/conoroneill"
+twitter: "https://twitter.com/conoro"
+github: "https://github.com/conoro"
 
 # Site config
-baseurl: "/pineapple"
+baseurl: ""
 highlighter: rouge
 sass:
   sass_dir: assets/scss
