--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # User config
-author: "Conor"
+author: "Tines Stories"
 tagline: "You want stories, you got stories"
 description: "Lots of example Stories"
 keywords: "Stories"
